aligned the View Purchase Details form

--- a/IMS_Client_4/Purchase/frmViewPurchaseDetails.resx
+++ b/IMS_Client_4/Purchase/frmViewPurchaseDetails.resx
@@ -133,4 +133,12 @@
         AAAACw==
 </value>
   </data>
+  <data name="kryptonDataGridView2.sGlowColor" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAD9nR2xvd0JveCwgVmVyc2lvbj0xLjAuMi4wLCBDdWx0dXJlPW5l
+        dXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGwFAQAAACJnR2xvd0JveC5nR2xvd0dyb3VwQm94K1Nlcmlh
+        bENvbG9yBQAAAAROYW1lAUEBUgFHAUIBAAAAAAgICAgCAAAABgMAAAAFV2hpdGX/AAAA/wAAAP8AAAD/
+        AAAACw==
+</value>
+  </data>
 </root>
