--- a/IMS_Client_4/Properties/Resources.resx
+++ b/IMS_Client_4/Properties/Resources.resx
@@ -256,6 +256,9 @@
   <data name="invoicewhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\invoicewhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MerchandisersGreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MerchandisersGreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
