--- a/IMS_Client_4/Properties/Resources.resx
+++ b/IMS_Client_4/Properties/Resources.resx
@@ -334,6 +334,9 @@
   <data name="printerwhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\printerwhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="printsmgreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\printsmgreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Productmastergreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Productmastergreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
