--- a/IMS_Client_4/Masters/frmSupplierMaster.resx
+++ b/IMS_Client_4/Masters/frmSupplierMaster.resx
@@ -141,7 +141,7 @@
         AAAACw==
 </value>
   </data>
-  <data name="dataGridView1.sGlowColor" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="dgvSupplier.sGlowColor" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAD9nR2xvd0JveCwgVmVyc2lvbj0xLjAuMi4wLCBDdWx0dXJlPW5l
         dXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGwFAQAAACJnR2xvd0JveC5nR2xvd0dyb3VwQm94K1Nlcmlh
