--- a/IMS_Client_4/Properties/Resources.resx
+++ b/IMS_Client_4/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="back_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\back_green.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Barcode1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Barcode1.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="barcodegreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barcodegreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
